links in nav, partial for lists, fixed code in reader mode, favicon

--- a/config.toml
+++ b/config.toml
@@ -11,8 +11,8 @@ defaultMarkdownHandler = "blackfriday"
 	hl_Lines           = ""
 	lineAnchors        = ""
 	lineNoStart        = 1
-	lineNos            = true
-	lineNumbersInTable = true
+	lineNos            = false
+	lineNumbersInTable = false
 	noClasses          = true
 	style              = "dracula"
 	tabWidth           = 8
