force orphan branch

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -49,3 +49,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           cname: blog.eriizu.fr
+          force_orphan: true
