--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,7 +15,7 @@ jobs:
           submodules: recursive # Fetch the Docsy theme
           fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
       - name: Checkout LFS objects
-        run: git lfs checkout && git lfs fetch
+        run: git lfs checkout && git lfs fetch && rm .gitattributes
 
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
