--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build:prod": "TAILWIND_MODE=build NODE_ENV=production postcss tailwind.scss -o static/styles.css && hugo"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
